--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,25 @@
     <link rel="stylesheet" type="text/css" href="./styles.css">
   </head>
   <body>
-    <div class="row">
+    <div class="row web-view">
       <div class="col">
         <h1 class="text-center intro">You're Invited to Emilia's 23rd Birthday!
           <br><a href="#blurb"><span class="material-symbols-outlined bottomArrow">
           arrow_downward
           </span></a></h1>
-          <h2><a href="../pages/home.html">the rest of the site</a></h2>
-        <h4 class="text-wrap intro text-center" id="blurb">Survivor has been CANCELLED in 2023. I need to be entertained because in January 2023, none of my reality shows will be on the air. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not.<br><a href="#contentCards"><span class="material-symbols-outlined bottomArrow">
+        <h4 class="text-wrap intro text-center" id="blurb">Survivor has been CANCELLED in 2023. I need to be entertained because in January 2023, none of my reality shows will be on the air. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not</h4>
+        <a><span class="material-symbols-outlined">
+          </span></a>
+      </div>
+    </div>
+
+    <div class="row mobile-view">
+      <div class="col">
+        <h1 class="text-center introMobile">You're Invited to Emilia's 23rd Birthday!
+          <br><a href="#blurb"><span class="material-symbols-outlined bottomArrow">
           arrow_downward
-          </span></a></h4>
+          </span></a></h1>
+        <h4 class="text-wrap intro text-center" id="blurb">Survivor has been CANCELLED in 2023. I need to be entertained because in January 2023, none of my reality shows will be on the air. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not</h4>
         <a><span class="material-symbols-outlined">
           </span></a>
       </div>
