--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <br><a href="#blurb"><span class="material-symbols-outlined bottomArrow">
           arrow_downward
           </span></a></h1>
-        <h4 class="text-wrap intro text-center" id="blurb">SurvivorUCF has been CANCELLED in 2023. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real,etc. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not. I don't make the rules. Get creative, you could do a loose interpretation of a character, its just for fun
+        <h4 class="text-wrap intro text-center" id="blurb">SurvivorUCF has been CANCELLED in 2023. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real,etc. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not. I don't make the rules. Get creative, you could do a loose interpretation of a character, it's just for fun
         <br><a href="#contentCards"><span class="material-symbols-outlined bottomArrow">
           arrow_downward
           </span></a></h4>
@@ -31,7 +31,7 @@
     <div class="row mobile-view">
       <div class="col introMobile">
         <h1 class="text-center">You're Invited to Emilia's 23rd Birthday!</h1>
-        <h4 class="text-wrap text-center" id="blurb">SurvivorUCF has been CANCELLED in 2023. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real, etc. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not. I don't make the rules. Get creative, you could do a loose interpretation of a character, its just for fun</h4>
+        <h4 class="text-wrap text-center" id="blurb">SurvivorUCF has been CANCELLED in 2023. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real, etc. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not. I don't make the rules. Get creative, you could do a loose interpretation of a character, it's just for fun</h4>
         <a><span class="material-symbols-outlined">
           </span></a>
       </div>
