--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is your official invitation and instructions to follow">
     <link rel="icon" type="image/x-icon" href="../spiritscoutsPictures/wjMam_.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
