--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is your official invitation and instructions to follow">
-    <meta property="og:image" content="https://ibb.co/VHtM5z8">
+    <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#">
+    <meta property="og:image" content="https://ibb.co/VHtM5z8"/>
     <link rel="icon" type="image/x-icon" href="../spiritscoutsPictures/wjMam_.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
