Wrapping up before launch
Changes Trashy animals layout on medium+, added resume, added CF+ section

--- a/pages/home.html
+++ b/pages/home.html
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="graphic-design.html"> Graphic Design</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="resume.html">Resume</a>
+                    <a class="nav-link" href="../EmiliaHernandez2023Resume.pdf">Resume</a>
                   </li>
               </ul>
             </div>
@@ -129,7 +129,7 @@
 
             <!--web design-->
                 <div class="col-lg-6 col-12 order-lg-2 dark second-col-start">
-                    <a href="anotherthing.html"><img class="mx-auto d-block preview-img" src="../assets/salir.png"></a>
+                    <a href="CareerFairPlus.html"><img class="mx-auto d-block preview-img" src="../cfp/productPictures (8).png"></a>
                 </div>
                     <!--web design-->
                 <div class="col-lg-6 col-12 order-lg-4 dark second-col-center">
