--- a/pages/trashy-animals.html
+++ b/pages/trashy-animals.html
@@ -93,32 +93,21 @@
               <div class="container-fluid d-none d-md-block">
                 <div class="row starter">
     <!--Display on medium and above-->
-                    <div class="col-md">
+                    <div class="col-md-1">
                     </div>
-                    <div class="col-md-5" style="display: flex; justify-content: center;">
+                    <div class="col-md" style="display: flex; justify-content: center;">
                         <img src="../assets/sad-02 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of crying snake holding a heart, tattooed, and rugged appearance">
                     </div>
                     <div class="col-md">
-                    </div>
-                    <div class="col-md-5">
                         <img src="../assets/sad-01 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of crying spider holding a heart, tattooed, and wearing jewelry">
                     </div>
                     <div class="col-md">
-                    </div>
-                </div>
-    
-                <div class="row" style="margin-top: 10%;">
-                    <div class="col-md">
-                    </div>
-                    <div class="col-md-5">
                         <img src="../assets/Sad frog 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of Frog holding a heart, bitten ear, and rugged appearance">
                     </div>
                     <div class="col-md">
-                    </div>
-                    <div class="col-md-5">
                         <img src="../assets/Sad rac 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of raccoon holding a heart, bitten ear, and rugged appearance">
                     </div>
-                    <div class="col-md">
+                    <div class="col-md-1">
                     </div>
                   </div>
             </div>
