--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <!-- Google tag (gtag.js) -->
+        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HPQFMFSJ4C"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -13,20 +13,158 @@
     <title>EMILIA HERNANDEZ</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="../spiritscoutsPictures/wjMam_.png">
+    <link rel="icon" type="image/x-icon" href="spiritscoutsPictures/wjMam_.png">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/stylez.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  
+    </script>
+    <link rel="stylesheet" type="text/css" href="css/stylez.css" />
     </head>
-  <body class="dark" style="margin-top: 20%;">
-    <img style="margin: auto; display:block" src="UnderConstruction.png" alt="floating heart with wings in pixelated style">
-    <h3 class="text-wrap text-center">Website Under Construction, check back in 2023!</h3>
-    <!--this is a note-->
-	<script src="index.js"></script>
-  </body>
+    <body style="background-color: rgb(29, 29, 29)">
+        <nav class="navbar topnav navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand active"  style=" font-size: xx-large; font-weight: bold; font-family: 'Palanquin Dark', sans-serif;" href="index.html">Emilia Hernandez</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">                <li class="nav-item">
+                <a class="nav-link" href="pages/campus-art.html"> Art Installations</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/web-development.html"> Web Development</a>
+              </li>
+              
+              <li class="nav-item">
+                <a class="nav-link" href="pages/game-design.html"> Game Development</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="pages/graphic-design.html"> Graphic Design</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="pages/trashy-animals.html"> Poster Series</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/CareerFairPlus.html"> Design Internship</a>
+                  </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="EmiliaHernandez2023Resume.pdf" target="__blank"> Resume</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+
+        <div class="container-fluid" style="background-color: rgb(32, 32, 32);">
+            <div class="row">
+                <div class="col-1 d-lg-none"></div>
+            <div class="col-lg-4 col-12"><img class="img-responsive" style="display:block; width:-webkit-fill-available" src="assets/ratPaint.gif"></div>
+            <div class="col-1 d-lg-none"></div>
+            <div class="col-lg-6 col-10 dark" style="margin:auto">
+                <h2 class="introductionHead dark text-wrap starter-small text-uppercase">I'm <span style="color: #e53886;">Emilia</span>: Your digital media friend and fiend</h2>
+                <h2 class="text-wrap introductionText starter-small" style="padding-bottom: 10%">I am an undergraduate <span style="color: #ffc904;">Digital Media: Web and Social Platforms</span> student at the <span style="color: #ffc904;">University of Central Florida.</span> I love to get my hands on new software and create projects that are evocative and memorable.</h2>
+            </div>
+            <div class="col-1 dark"></div>
+        </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row dark text-center" style="padding: 30px;">
+                <h3>My work</h3>
+            </div>
+            <div class="row dark">
+                <div class="col-lg-6 col-12 order-lg-1 dark first-col-start">
+                    <a href="pages/campus-art.html"><img class="mx-auto d-block preview-img" src="assets/Group 2.png" alt="Design for Cultural center mural designed by Emilia Hernandez" href="pages/campus-art.html"></a>
+                </div>
+                <div class="col-lg-6 col-12 order-lg-3 dark first-col-center">
+                    <h3 class="dark text-wrap">Art Installations</h3>
+                </div>
+                <div class="col-lg-6 col-12 order-lg-5 dark first-col-center">
+                    <h5 class="dark text-wrap">University of Central Florida</h5>
+                </div>
+                <div class="col-lg-6 col-12 order-lg-2 dark first-col-start">
+                    <a href="pages/web-development.html"><img class="mx-auto d-block preview-img" alt="Three mobile devices displaying previews for Pegasus Palooza website design" src="assets/palooza mockups.png"></a>
+                </div>
+                    <!--web development-->
+                <div class="col-lg-6 col-12 order-lg-4 dark first-col-center">
+                    <h3 class="dark text-wrap">Web Development</h3>
+                </div>
+                <!--web development-->
+                <div class="col-lg-6 col-12 order-lg-6 dark first-col-center">
+                    <h5 class="dark text-wrap">Office of Student Involvement</h5>
+                </div>
+            </div>
+
+            <div class="row">
+
+            <!--web development-->
+            <div class="col-lg-6 col-12 order-lg-1 col dark first-col-start">
+                <a href="pages/game-design.html"><img class="mx-auto d-block preview-img" alt="Pair of laptops previewing the games: Her Bedtime stories, and Smalltown" src="assets/Group 4.png"></a>
+            </div>
+            <!--posters-->
+            <div class="col-lg-6 col-12 order-lg-3 dark first-col-center">
+                <h3 class="dark text-wrap">Game Development</h3>
+            </div>
+
+        <!--posters-->
+            <div class="col-lg-6 col-12 order-lg-5 dark first-col-center">
+                <h4 class="dark text-wrap">Ludum Dare Game Jams</h4>
+            </div>
+            <!--Graphic Design-->
+            <div class="col-lg-6 col-12 order-lg-2 dark first-col-start">
+                <a href="pages/graphic-design.html"><img class="mx-auto d-block preview-img" alt="Preview of UCF flyer work" src="assets/Group 1.png" ></a>
+            </div>
+        <!--Graphic Design-->
+            <div class="col-lg-6 col-12 order-lg-4 dark first-col-center">
+                <h3 class="dark text-wrap">Graphic Design</h3>
+            </div>
+        <!--Graphic Design-->
+            <div class="col-lg-6 col-12 order-lg-6 dark first-col-center"> 
+                <h4 class="dark text-wrap">Office of Student Involvement</h4>
+            </div>
+            </div>
+
+            <div class="row">
+
+            <!--web development-->
+                <div class="col-lg-6 col-12 order-lg-2 dark first-col-start">
+                    <a href="pages/CareerFairPlus.html"><img class="mx-auto d-block preview-img" src="cfp/productPictures (1).png"></a>
+                </div>
+                    <!--web development-->
+                <div class="col-lg-6 col-12 order-lg-4 dark first-col-center">
+                    <h3 class="dark text-wrap">Design Internship Work</h3>
+                </div>
+                <!--web development-->
+                <div class="col-lg-6 col-12 order-lg-6 dark first-col-last">
+                    <h4 class="dark text-wrap">Career Fair Plus</h4>
+                </div>
+
+                <div class="col-lg-6 col-12 order-lg-1 col dark first-col-start">
+                    <a href="pages/trashy-animals.html"><img class="mx-auto d-block preview-img" alt="design of Trashy Animals: The Rat" src="assets/Group 3.png"></a>
+                </div>
+                <!--posters-->
+                <div class="col-lg-6 col-12 order-lg-3 dark first-col-center">
+                    <h3 class="dark text-wrap">Trashy Animals Poster Series</h3>
+                </div>
+
+            <!--posters-->
+                <div class="col-lg-6 col-12 order-lg-5 dark first-col-last">
+                    <h4 class="dark text-wrap">Personal</h4>
+                </div>
+
+            </div>
+        </div>
+    </body>
+    <footer>
+      <div>
+        <h6 class="starter-small text-center footer-me">Site Developed by Emilia Hernandez<br>✉️ <a href="mailto:emilia.b.hernandez@gmail.com" style="color:#ffc904"> emilia.b.hernandez@gmail.com</a></h6>
+    </div>
+    </footer>
 </html>
