added blog link to CFP

--- a/pages/CareerFairPlus.html
+++ b/pages/CareerFairPlus.html
@@ -65,11 +65,10 @@
               <div class="col"></div>
               <div class="col-lg-4 col-sm-12 starter text-wrap"><h1 class="text-wrap">Design Internship</h1>
               <h2>Career Fair Plus</h2>
-            <p>At Career Fair Plus, I have completed a variety of projects with a focus on graphics and HTML/CSS. When I first joined the team, CF+ had recently gone through a branding change, and many of my responsibilities involved updating previous materials, while creating new content that fit the guidelines. In essence, many times I am assigned tasks that make things look better</p></div>
+            <p>At Career Fair Plus, I have completed a variety of projects with a focus on graphics and HTML/CSS. When I first joined the team, CF+ had recently gone through a branding change, and many of my responsibilities involved updating previous materials, while creating new content that fit the guidelines. In essence, many times I am assigned tasks that make things look better. I also generate the blog posts on the <a href="https://www.careerfairplus.com/blog">CFP Blog</a></p></div>
               <div class="col-lg-5 col-sm-12">
                 <img class="mx-auto d-block preview-img"  src="../cfp/productPictures (8).png">
               </div>
-              
               <div class="col"></div>
             </div>
             <div class="row starter">
