--- a/src/index.html
+++ b/src/index.html
@@ -25,51 +25,8 @@
   <body>
     <div class="row web-view">
       <div class="col">
-        <h1 class="text-center intro">You're Invited to my 23rd Birthday Party(01/28 7pm)!
-          <br><a href="#blurb"><span class="material-symbols-outlined bottomArrow">
-          arrow_downward
-          </span></a></h1>
-        <h4 class="text-wrap intro text-center" id="blurb">SurvivorUCF has been CANCELLED in 2023. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real,etc. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not. I don't make the rules. Get creative, you could do a loose interpretation of a character, it's just for fun. You have over 100 options to choose from below
-        <br><a href="#contentCards"><span class="material-symbols-outlined bottomArrow">
-          arrow_downward
-          </span></a></h4>
+        <h1 class="text-center intro">This page self-destructed</h1>
       </div>
     </div>
-
-    <div class="row mobile-view">
-      <div class="col introMobile">
-        <h1 class="text-center">You're Invited to my 23rd Birthday Party!(01/28 7pm)</h1>
-        <h4 class="text-wrap text-center" id="blurb">SurvivorUCF has been CANCELLED in 2023. This year the theme is <strong>characters emilia loves.</strong> What this means is I at one point adored, had a crush on, or wished they were real, etc. very important note: Some of these are from the past, and some are from the present, and not all represent my current views. Your selection will tell me a lot about you, like if you're a slut or not. I don't make the rules. Get creative, you could do a loose interpretation of a character, it's just for fun. You have over 100 options to choose from below</h4>
-        <a><span class="material-symbols-outlined">
-          </span></a>
-      </div>
-    </div>
-
-    <main id="contentCards">
-      <h1>Select to your <span class="material-symbols-outlined">
-        favorite
-        </span>'s content</h1><div class="all-elephant-cards" ></div>
-    </main>
-    <script type="module" src="app.js"></script>
-    <div id="disqus_thread"></div>
-    <script>
-        /**
-        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-        /*
-        var disqus_config = function () {
-        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        */
-        (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://emiliah.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <script type="module" src="app.js"></script>
   </body>
 </html>
