--- a/index copy 2.html
+++ b/index copy 2.html
@@ -61,7 +61,13 @@
                   <a class="nav-link" href="pages/graphic-design.html"> Graphic Design</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Emilia Hernandez - Resume 2024.pdf" target="__blank"> Resume</a>
+                  <a class="nav-link" href="pages/trashy-animals.html"> Poster Series</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/CareerFairPlus.html"> Design Internship</a>
+                  </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="EmiliaHernandez2023Resume.pdf" target="__blank"> Resume</a>
                 </li>
               </ul>
             </div>
@@ -84,16 +90,27 @@
             <div class="row dark text-center" style="padding: 30px;">
                 <h3>My work</h3>
             </div>
+            <div class="row dark text-center" style="padding: 30px;">
+            <div class="col-5">
+                <a href="pages/web-development.html"><img class="mx-auto d-block preview-img" alt="Three mobile devices displaying previews for Pegasus Palooza website design" src="assets/palooza mockups.png"></a>
+            </div>
+            <div class="col-7"><h3 class="dark text-wrap">Web Development</h3>
+            <br>
+        </div>
+            </div>
+
+
             <div class="row dark">
-                <div class="col-lg-6 col-12 order-lg-1 dark first-col-start">
+                <div class="col-lg-6 col-12 order-lg-1 dark">
                     <a href="pages/campus-art.html"><img class="mx-auto d-block preview-img" src="assets/Group 2.png" alt="Design for Cultural center mural designed by Emilia Hernandez" href="pages/campus-art.html"></a>
                 </div>
-                <div class="col-lg-6 col-12 order-lg-3 dark first-col-center">
+                <div class="col-lg-6 col-12 order-lg-3 dark">
                     <h3 class="dark text-wrap">Art Installations</h3>
                 </div>
-                <div class="col-lg-6 col-12 order-lg-5 dark first-col-center">
+                <div class="col-lg-6 col-12 order-lg-5 dark">
                     <h5 class="dark text-wrap">University of Central Florida</h5>
                 </div>
+
                 <div class="col-lg-6 col-12 order-lg-2 dark first-col-start">
                     <a href="pages/web-development.html"><img class="mx-auto d-block preview-img" alt="Three mobile devices displaying previews for Pegasus Palooza website design" src="assets/palooza mockups.png"></a>
                 </div>
@@ -103,7 +120,7 @@
                 </div>
                 <!--web development-->
                 <div class="col-lg-6 col-12 order-lg-6 dark first-col-center">
-                    <h5 class="dark text-wrap">Ever.Ag, Career Fair Plus, University of Central Florida</h5>
+                    <h5 class="dark text-wrap">Office of Student Involvement</h5>
                 </div>
             </div>
 
@@ -120,11 +137,11 @@
 
         <!--posters-->
             <div class="col-lg-6 col-12 order-lg-5 dark first-col-center">
-                <h5 class="dark text-wrap">Ludum Dare Game Jams</h5>
+                <h4 class="dark text-wrap">Ludum Dare Game Jams</h4>
             </div>
             <!--Graphic Design-->
             <div class="col-lg-6 col-12 order-lg-2 dark first-col-start">
-                <a href="pages/graphic-design.html"><img class="mx-auto d-block preview-img" alt="Preview of UCF flyer work" src="assets/Group 3.png" ></a>
+                <a href="pages/graphic-design.html"><img class="mx-auto d-block preview-img" alt="Preview of UCF flyer work" src="assets/Group 1.png" ></a>
             </div>
         <!--Graphic Design-->
             <div class="col-lg-6 col-12 order-lg-4 dark first-col-center">
@@ -132,14 +149,44 @@
             </div>
         <!--Graphic Design-->
             <div class="col-lg-6 col-12 order-lg-6 dark first-col-center"> 
-                <h5 class="dark text-wrap">Personal, University of Central Florida</h5>
+                <h4 class="dark text-wrap">Office of Student Involvement</h4>
             </div>
+            </div>
+
+            <div class="row">
+
+            <!--web development-->
+                <div class="col-lg-6 col-12 order-lg-2 dark first-col-start">
+                    <a href="pages/CareerFairPlus.html"><img class="mx-auto d-block preview-img" src="cfp/productPictures (1).png"></a>
+                </div>
+                    <!--web development-->
+                <div class="col-lg-6 col-12 order-lg-4 dark first-col-center">
+                    <h3 class="dark text-wrap">Design Internship Work</h3>
+                </div>
+                <!--web development-->
+                <div class="col-lg-6 col-12 order-lg-6 dark first-col-last">
+                    <h4 class="dark text-wrap">Career Fair Plus</h4>
+                </div>
+
+                <div class="col-lg-6 col-12 order-lg-1 col dark first-col-start">
+                    <a href="pages/trashy-animals.html"><img class="mx-auto d-block preview-img" alt="design of Trashy Animals: The Rat" src="assets/Group 3.png"></a>
+                </div>
+                <!--posters-->
+                <div class="col-lg-6 col-12 order-lg-3 dark first-col-center">
+                    <h3 class="dark text-wrap">Trashy Animals Poster Series</h3>
+                </div>
+
+            <!--posters-->
+                <div class="col-lg-6 col-12 order-lg-5 dark first-col-last">
+                    <h4 class="dark text-wrap">Personal</h4>
+                </div>
+
             </div>
         </div>
     </body>
     <footer>
       <div>
-        <h6 class="starter-small text-center footer-me first-col-start">Site Developed by Emilia Hernandez<br>✉️ <a href="mailto:emilia.b.hernandez@gmail.com" style="color:#ffc904"> emilia.b.hernandez@gmail.com</a></h6>
+        <h6 class="starter-small text-center footer-me">Site Developed by Emilia Hernandez<br>✉️ <a href="mailto:emilia.b.hernandez@gmail.com" style="color:#ffc904"> emilia.b.hernandez@gmail.com</a></h6>
     </div>
     </footer>
 </html>
