--- a/pages/campus-art.html
+++ b/pages/campus-art.html
@@ -45,7 +45,7 @@
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">                <li class="nav-item">
-                <a class="nav-link" href="campus-art.html"> Art Installations</a>
+                <a class="nav-link bg-dark" href="campus-art.html"> Art Installations</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="web-development.html"> Web Development</a>
@@ -58,13 +58,7 @@
                   <a class="nav-link" href="graphic-design.html"> Graphic Design</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="trashy-animals.html"> Poster Series</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="CareerFairPlus.html"> Design Internship</a>
-                  </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../EmiliaHernandez2023Resume.pdf" target="__blank"> Resume</a>
+                  <a class="nav-link" href="../Emilia Hernandez - Resume 2024.pdf" target="__blank"> Resume</a>
                 </li>
               </ul>
             </div>
