--- a/pages/game-design.html
+++ b/pages/game-design.html
@@ -52,19 +52,13 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link" href="game-design.html"> Game Development</a>
+                <a class="nav-link bg-dark" href="game-design.html"> Game Development</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="graphic-design.html"> Graphic Design</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="trashy-animals.html"> Poster Series</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="CareerFairPlus.html"> Design Internship</a>
-                  </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../EmiliaHernandez2023Resume.pdf" target="__blank"> Resume</a>
+                  <a class="nav-link" href="../Emilia Hernandez - Resume 2024.pdf" target="__blank"> Resume</a>
                 </li>
               </ul>
             </div>
