--- a/pages/web-development.html
+++ b/pages/web-development.html
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="campus-art.html"> Art Installations</a>
               </li>
               <li class="nav-item bg-dark">
-                <a class="nav-link bg-dark" href="web-development.html"> Web Work</a>
+                <a class="nav-link bg-dark" href="web-development.html"> Web Development</a>
               </li>
               
               <li class="nav-item">
