--- a/pages/web-development.html
+++ b/pages/web-development.html
@@ -487,7 +487,7 @@
                           <div class="col-lg-1">
                           </div>
                           <div class="col-lg-3 col-sm-12">
-                            <img class="mx-auto d-block preview-img" src="../cfp/screencapture-1836892-hubspotpreview-na1-hcms-preview-content-95880122249-2023-01-25-10_15_09 1.png">
+                            <img class="mx-auto d-block preview-img" src="../cfp/scrreencapture.png">
                           </div>
                           <div class="col-lg-3 col-sm-12">
                             <img class="mx-auto d-block preview-img" src="../cfp/Group 14.jpg">
