--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             </div>
           </nav>
 
-        <div class="container-fluid" style="background-color: rgb(32, 32, 32);">
+        <div class="container-fluid" style="background-color: rgb(32, 32, 32); margin-top:40px">
             <div class="row">
                 <div class="col-1 d-lg-none"></div>
-            <div class="col-lg-4 col-12"><img class="img-responsive" style="display:block; width:-webkit-fill-available" src="assets/ratPaint.gif"></div>
+            <div class="col-lg-4 col-12"><img class="img-responsive" style="display:block; width:-webkit-fill-available; padding: 30px" src="assets/ratPaint.gif"></div>
             <div class="col-1 d-lg-none"></div>
-            <div class="col-lg-6 col-10 dark" style="margin:auto">
+            <div class="col-lg-7 col-10 dark" style="margin:auto">
                 <h2 class="introductionHead dark text-wrap starter-small text-uppercase">I'm <span style="color: #e53886;">Emilia</span>: Your digital media friend and fiend</h2>
                 <h2 class="text-wrap introductionText starter-small" style="padding-bottom: 10%">I am an undergraduate <span style="color: #ffc904;">Digital Media: Web and Social Platforms</span> student at the <span style="color: #ffc904;">University of Central Florida.</span> I love to get my hands on new software and create projects that are evocative and memorable.</h2>
             </div>
@@ -139,7 +139,7 @@
     </body>
     <footer>
       <div>
-        <h6 class="starter-small text-center footer-me first-col-start">Site Developed by Emilia Hernandez<br>✉️ <a href="mailto:emilia.b.hernandez@gmail.com" style="color:#ffc904"> emilia.b.hernandez@gmail.com</a></h6>
+        <h6 class="starter-small text-center footer-me first-col-start">Site Developed by Emilia Hernandez<br>✉️ <a href="mailto:emilia.b.hernandez@gmail.com" style="color:#ffc904"> emilia.b.hernandez@gmail.com</a> 🤝🏽 <a href="https://www.linkedin.com/in/emilia-hernandez-560489159/" style="color:#ffc904"> Connect with me on Linkedin</a> 🖥️ <a href="https://github.com/EmiliaHernandez" style="color:#ffc904"> View my Github Activity</a></h6>
     </div>
     </footer>
 </html>
