--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -70,7 +70,7 @@
                 <div class="col-md-1 d-none d-md-block">
                 </div>
                 <div class="col-md-1 d-none d-md-block">
-                    <h4 class="largeRatText aAngular" style="background-color: white;padding-top:50px; padding-bottom:60px; text-align: center; margin-right: -5%;margin-top: 40%; padding-left: 10px;padding-right: 10px;position:absolute; z-index: 1;">
+                    <h4 class="largeRatText" style="background-color: white;padding-top:50px; padding-bottom:60px; text-align: center; margin-right: -5%;margin-top: 40%; padding-left: 10px;padding-right: 10px;position:absolute; z-index: 1;">
                      Misunderstood Creatures
                     </h4>
                 </div>
@@ -87,10 +87,10 @@
                 <div class="col-md-1 d-none d-md-block">
                 </div>
                 <div class="col-md-4 d-none d-md-block infoTronSide light">
-                    <h5 class="help" style="padding-right: 20%;padding-left:10%; margin-bottom:10px">
+                    <h5 class="help" style="padding-right: 20%;padding-left:10%; margin-bottom:10px; line-height: 1.4;">
                         I used Procreate and Adobe Illustrator to create this poster set. The first three images were featured in the Orlando Museum of Art for the Eclectic Knights pop-up event! <br></h5>
                         <br>
-                        <h5 class="help" style="padding-right: 20%;padding-left:10%; margin-bottom:10px">
+                        <h5 class="help" style="padding-right: 20%;padding-left:10%; margin-bottom:10px; line-height: 1.4">
                         Artist Statement: I have a soft spot for misunderstood animals and created this set of illustrations out of that love. The set features some of the world’s most hated animals, including the rat, snake, spider, frog, and raccoon.</h5>
 
                 </div>
