--- a/pages/web-development.html
+++ b/pages/web-development.html
@@ -83,23 +83,26 @@
             <div id="turntablesCaro" class="carousel vert slide" data-ride="carousel" data-interval="false" data-bs-interval="false" style="border:solid 4px rgba(255, 255, 255, 0.595); padding:10px;">
                 <div class="carousel-inner" style="display:inline-block; ">
                     <div class="carousel-item active">
-                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/Frame 2.png">
+                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/EverAgUpscaled-02.png">
                     </div>
                     <div class="carousel-item">
-                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/Frame 3.png">
+                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/EverAgUpscaled-03.png">
                     </div>
                     <div class="carousel-item">
-                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/Frame 4.png">
+                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/EverAgUpscaled-04.png">
                     </div>
                     <div class="carousel-item">
-                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/Frame 5.png">
+                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/EverAgUpscaled-05.png">
                     </div>
                     <div class="carousel-item">
-                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/Frame 6.png">
+                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/EverAgUpscaled-06.png">
                     </div>
                     <div class="carousel-item">
-                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/Frame 7.png">
+                        <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/EverAgUpscaled-07.png">
                     </div>
+                    <div class="carousel-item">
+                      <img alt="" class="d-block mx-auto img-fluid" src="../WebDesignScreens/EverAgUpscaled-08.png">
+                  </div>
                 </div>
                 <a class="carousel-control-prev" href="#turntablesCaro" role="button" data-slide="prev" style="left:-20%; bottom:70%;">
                     <span class="carousel-control-prev-icon  rounded-circle" aria-hidden="true" style="background-image: url(../assets/arrow-up-circle-fill\ \(1\).svg);width:70%; height:70%"><p style="color:white; position: relative; top: 100%;">Scroll Up</p></span>
