--- a/pages/ReactPortfolio.html
+++ b/pages/ReactPortfolio.html
@@ -56,7 +56,7 @@
               <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
               <div class="d-block d-sm-none col-1"></div>
               <div class="col-lg-6 col-md-4 col-10 my-auto">
-                <h2 style="color: rgb(0, 170, 255);">Dynamic List and Search</h2>
+                <h2 style="color: rgb(0, 170, 255);"><a href="https://github.com/UCF-GaiM/dig4639-s24-react-EmiliaHernandez/tree/799d6a9867bb3b4fec6778acb9a97cbf444c5059/labs/lab3">Dynamic List and Search</a></h2>
               <p style="color: rgb(255, 174, 0);">Development</p>
                 <h5 style="color:white">For this lab, I developed a webpage which would function as a list , which users can add items to, with real-time updates. This is all possible with the React technology, a smart javascript library. This webpage also contains a feature that allows users to search for an item on the list by typing the first letters of the word, in this case, a name.</h5>
                   <br>
@@ -84,7 +84,7 @@
     <div class="order-md-4 col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="order-md-2 d-block d-sm-none col-1"></div>
     <div class="order-md-3 col-lg-6 col-md-4 col-10 starter-medium">
-      <h2 style="color: rgb(0, 170, 255);">Todo App</h2>
+      <h2 style="color: rgb(0, 170, 255);"><a href="../assets/Emilia Hernandez - TODO.pdf">Todo App</a></h2>
     <p style="color: rgb(255, 174, 0);">Design</p>
       <h5 style="color:white">Utilizing Figma, I designed a Todo app with custom branding and several functionalities which include:
         </h5>
@@ -120,7 +120,7 @@
     <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="d-block d-sm-none col-1"></div>
     <div class="col-lg-6 col-md-4 col-10 starter-medium">
-      <h2 style="color: rgb(0, 170, 255);">Exercise App</h2>
+      <h2 style="color: rgb(0, 170, 255);"><a href="https://github.com/UCF-GaiM/dig4639-s24-react-EmiliaHernandez/tree/799d6a9867bb3b4fec6778acb9a97cbf444c5059/labs/lab5">Exercise App</a></h2>
     <p style="color: rgb(255, 174, 0);">Development</p>
       <h5 style="color:white">The objective of this lab was to develop an exercise app that would have two different modes: 
         </h5>
@@ -151,7 +151,7 @@
     <div class="order-md-4 col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="order-md-2 d-block d-sm-none col-1"></div>
     <div class="order-md-3 col-lg-6 col-md-4 col-10">
-      <h2 style="color: rgb(0, 170, 255);">Studycard App</h2>
+      <h2 style="color: rgb(0, 170, 255);"><a href="../assets/ex9-Emilia Hernandez.pdf">Studycard App</a></h2>
     <p style="color: rgb(255, 174, 0);">Design</p>
       <h5 style="color:white">This studycard app was designed using Figma to achieve the following:
         </h5>
@@ -186,7 +186,7 @@
     <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="d-block d-sm-none col-1"></div>
     <div class="col-lg-6 col-md-4 col-10 starter-medium">
-      <h2 style="color: rgb(0, 170, 255);">Running Exercise App</h2>
+      <h2 style="color: rgb(0, 170, 255);"><a href="https://emiliahernandez.github.io/lab6">Running Exercise App</a></h2>
     <p style="color: rgb(255, 174, 0);">Development</p>
       <h5 style="color:white">To expand on the last lab, this running exercise webpage was designed to print timestamps whenever a button is pressed, powered by React. This would typically be useful to time laps, or other exercises where timing is relevant.</h5>
         <br>
