--- a/pages/ReactPortfolio.html
+++ b/pages/ReactPortfolio.html
@@ -56,7 +56,7 @@
               <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
               <div class="d-block d-sm-none col-1"></div>
               <div class="col-lg-6 col-md-4 col-10 my-auto">
-                <h2 style="color: rgb(0, 170, 255);"><a href="https://github.com/UCF-GaiM/dig4639-s24-react-EmiliaHernandez/tree/799d6a9867bb3b4fec6778acb9a97cbf444c5059/labs/lab3">Dynamic List and Search</a></h2>
+                <h2 style="color: rgb(0, 170, 255);"><a href="https://github.com/EmiliaHernandez/EmiliaHernandez.github.io/tree/master/lab3">Dynamic List and Search</a></h2>
               <p style="color: rgb(255, 174, 0);">Development</p>
                 <h5 style="color:white">For this lab, I developed a webpage which would function as a list , which users can add items to, with real-time updates. This is all possible with the React technology, a smart javascript library. This webpage also contains a feature that allows users to search for an item on the list by typing the first letters of the word, in this case, a name.</h5>
                   <br>
