--- a/pages/ReactPortfolio.html
+++ b/pages/ReactPortfolio.html
@@ -120,7 +120,7 @@
     <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="d-block d-sm-none col-1"></div>
     <div class="col-lg-6 col-md-4 col-10 starter-medium">
-      <h2 style="color: rgb(0, 170, 255);"><a href="https://github.com/UCF-GaiM/dig4639-s24-react-EmiliaHernandez/tree/799d6a9867bb3b4fec6778acb9a97cbf444c5059/labs/lab5">Exercise App</a></h2>
+      <h2 style="color: rgb(0, 170, 255);"><a href="https://github.com/EmiliaHernandez/EmiliaHernandez.github.io/tree/master/lab5">Exercise App</a></h2>
     <p style="color: rgb(255, 174, 0);">Development</p>
       <h5 style="color:white">The objective of this lab was to develop an exercise app that would have two different modes: 
         </h5>
