--- a/pages/ReactPortfolio.html
+++ b/pages/ReactPortfolio.html
@@ -39,9 +39,8 @@
 
     <body style="background-color: rgb(29, 29, 29)">
       <div class="row" style=" background-color: #121214; padding: 10px;margin-bottom: 4%;">
-        <div class="col"></div><div class="my-auto col-lg-1 col-3 col-sm-2 col-md-1"><img style="width: 100%;" src="../assets/React-Icon.png"></div><div class="col-sm-8 col-6 col-lg-5 col-md-7 my-auto mx-auto"><h2 style="color: #ffc107">Mobile Development Portfolio </h2><p style="color:white">React Design and Development Projects By Emilia Hernandez</p></div><div class="col"></div>
+        <div class="col"></div><div class="my-auto col-lg-1 col-3 col-sm-2 col-md-1"><img style="width: 100%;" src="../assets/React-Icon.png"></div><div class="col-sm-8 col-6 col-lg-5 col-md-7 my-auto mx-auto"><h2 style="color: #ffc107">React Design + Development Projects</h2><p style="color:white">Click project titles to view source code or previews</p></div><div class="col"></div>
     </div>
-
 <!--Lab 3-->
           <div class="row" style="padding-top: 2%;padding-bottom:5%;">
             <div class="col-lg-1 col-md-1 col-sm-4 col-2"></div>
@@ -56,7 +55,7 @@
               <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
               <div class="d-block d-sm-none col-1"></div>
               <div class="col-lg-6 col-md-4 col-10 my-auto">
-                <h2 style="color: rgb(0, 170, 255);"><a href="https://github.com/EmiliaHernandez/EmiliaHernandez.github.io/tree/master/lab3">Dynamic List and Search</a></h2>
+                <h2 style="color: rgb(255, 0, 140);"><a target="_blank" style="color: #A8A8FF" href="https://github.com/EmiliaHernandez/EmiliaHernandez.github.io/tree/master/lab3">Dynamic List and Search</a></h2>
               <p style="color: rgb(255, 174, 0);">Development</p>
                 <h5 style="color:white">For this lab, I developed a webpage which would function as a list , which users can add items to, with real-time updates. This is all possible with the React technology, a smart javascript library. This webpage also contains a feature that allows users to search for an item on the list by typing the first letters of the word, in this case, a name.</h5>
                   <br>
@@ -84,7 +83,7 @@
     <div class="order-md-4 col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="order-md-2 d-block d-sm-none col-1"></div>
     <div class="order-md-3 col-lg-6 col-md-4 col-10 starter-medium">
-      <h2 style="color: rgb(0, 170, 255);"><a href="../assets/Emilia Hernandez - TODO.pdf">Todo App</a></h2>
+      <h2 style="color: rgb(0, 170, 255);"><a target="_blank" style="color: #A8A8FF" href="../assets/Emilia Hernandez - TODO.pdf">Todo App</a></h2>
     <p style="color: rgb(255, 174, 0);">Design</p>
       <h5 style="color:white">Utilizing Figma, I designed a Todo app with custom branding and several functionalities which include:
         </h5>
@@ -120,7 +119,7 @@
     <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="d-block d-sm-none col-1"></div>
     <div class="col-lg-6 col-md-4 col-10 starter-medium">
-      <h2 style="color: rgb(0, 170, 255);"><a href="https://github.com/EmiliaHernandez/EmiliaHernandez.github.io/tree/master/lab5">Exercise App</a></h2>
+      <h2 style="color: rgb(0, 170, 255);"><a target="_blank" style="color: #A8A8FF" href="https://github.com/EmiliaHernandez/EmiliaHernandez.github.io/tree/master/lab5">Exercise App</a></h2>
     <p style="color: rgb(255, 174, 0);">Development</p>
       <h5 style="color:white">The objective of this lab was to develop an exercise app that would have two different modes: 
         </h5>
@@ -151,7 +150,7 @@
     <div class="order-md-4 col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="order-md-2 d-block d-sm-none col-1"></div>
     <div class="order-md-3 col-lg-6 col-md-4 col-10">
-      <h2 style="color: rgb(0, 170, 255);"><a href="../assets/ex9-Emilia Hernandez.pdf">Studycard App</a></h2>
+      <h2 style="color: rgb(0, 170, 255);"><a style="color: #A8A8FF"  target="_blank" href="../assets/ex9-Emilia Hernandez.pdf">Studycard App</a></h2>
     <p style="color: rgb(255, 174, 0);">Design</p>
       <h5 style="color:white">This studycard app was designed using Figma to achieve the following:
         </h5>
@@ -186,7 +185,7 @@
     <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="d-block d-sm-none col-1"></div>
     <div class="col-lg-6 col-md-4 col-10 starter-medium">
-      <h2 style="color: rgb(0, 170, 255);"><a href="https://emiliahernandez.github.io/lab6">Running Exercise App</a></h2>
+      <h2 style="color: rgb(0, 170, 255);"><a target="_blank" style="color: #A8A8FF" href="https://emiliahernandez.github.io/lab6">Running Exercise App</a></h2>
     <p style="color: rgb(255, 174, 0);">Development</p>
       <h5 style="color:white">To expand on the last lab, this running exercise webpage was designed to print timestamps whenever a button is pressed, powered by React. This would typically be useful to time laps, or other exercises where timing is relevant.</h5>
         <br>
