--- a/pages/ReactPortfolio.html
+++ b/pages/ReactPortfolio.html
@@ -83,7 +83,7 @@
     <div class="order-md-4 col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="order-md-2 d-block d-sm-none col-1"></div>
     <div class="order-md-3 col-lg-6 col-md-4 col-10 starter-medium">
-      <h2 style="color: rgb(0, 170, 255);"><a target="_blank" style="color: #A8A8FF" href="../assets/Emilia Hernandez - TODO.pdf">Todo App</a></h2>
+      <h2 style="color: rgb(0, 170, 255);"><a target="_blank" style="color: #A8A8FF" href="../assets/TodoApp.pdf">Todo App</a></h2>
     <p style="color: rgb(255, 174, 0);">Design</p>
       <h5 style="color:white">Utilizing Figma, I designed a Todo app with custom branding and several functionalities which include:
         </h5>
