--- a/pages/ReactPortfolio.html
+++ b/pages/ReactPortfolio.html
@@ -54,7 +54,7 @@
               <div class="col-2 col-md col-sm-4"></div>
               <div class="col-sm-1 d-none d-sm-block d-md-none"></div>
               <div class="d-block d-sm-none col-1"></div>
-              <div class="col-lg-6 col-md-4 col-10 my-auto">
+              <div class="starter-medium col-lg-6 col-md-4 col-10">
                 <h2 style="color: rgb(255, 0, 140);"><a target="_blank" style="color: #A8A8FF" href="https://github.com/EmiliaHernandez/EmiliaHernandez.github.io/tree/master/lab3">Dynamic List and Search</a></h2>
               <p style="color: rgb(255, 174, 0);">Development</p>
                 <h5 style="color:white">For this lab, I developed a webpage which would function as a list , which users can add items to, with real-time updates. This is all possible with the React technology, a smart javascript library. This webpage also contains a feature that allows users to search for an item on the list by typing the first letters of the word, in this case, a name.</h5>
@@ -137,7 +137,7 @@
 <!--Studycard App-->
 <div class="row" style="padding-top: 5%; padding-bottom:5%; background-color: #121214">
   <div class="order-md-5 col-lg-1 col-md-1 col-sm-4 col-2"></div>
-      <div class="order-md-6 col-lg-3 col-md-5 col-sm-4 col-8" style="margin-top:auto; margin-bottom: auto; text-align: center;">
+      <div class="order-md-6 col-lg-3 col-md-5 col-sm-4 col-8 starter-medium" style="margin-top:auto; margin-bottom: auto; text-align: center;">
       <div style="border:solid 4px rgba(255, 255, 255, 0.595); padding:10px;">
             <div>
                 <img style="margin:0px" alt="" class="d-block mx-auto img-fluid" src="../assets/StudyCard.gif">
@@ -149,7 +149,7 @@
 
     <div class="order-md-4 col-sm-1 d-none d-sm-block d-md-none"></div>
     <div class="order-md-2 d-block d-sm-none col-1"></div>
-    <div class="order-md-3 col-lg-6 col-md-4 col-10">
+    <div class="order-md-3 col-lg-6 col-md-4 col-10 starter-medium">
       <h2 style="color: rgb(0, 170, 255);"><a style="color: #A8A8FF"  target="_blank" href="../assets/ex9-Emilia Hernandez.pdf">Studycard App</a></h2>
     <p style="color: rgb(255, 174, 0);">Design</p>
       <h5 style="color:white">This studycard app was designed using Figma to achieve the following:
