Added react to menu

--- a/pages/home.html
+++ b/pages/home.html
@@ -66,6 +66,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="../EmiliaHernandez2023Resume.pdf" target="__blank"> Resume</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ReactPortfolio.html" target="__blank"> React</a>
+                  </li>
               </ul>
             </div>
           </nav>
