--- a/pages/ReactPortfolio.html
+++ b/pages/ReactPortfolio.html
@@ -38,6 +38,35 @@
     </head>
 
     <body style="background-color: rgb(29, 29, 29)">
+      <nav class="navbar topnav navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand active"  style=" font-size: xx-large; font-weight: bold; font-family: 'Palanquin Dark', sans-serif;" href="../index.html">Emilia Hernandez</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">                <li class="nav-item">
+            <a class="nav-link" href="campus-art.html"> Art Installations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="web-development.html"> Web Development</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="game-design.html"> Game Development</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="graphic-design.html"> Graphic Design</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Emilia Hernandez - Resume 2024.pdf" target="__blank"> Resume</a>
+            </li>
+            <li class="nav-item bg-dark">
+              <a class="nav-link bg-dark" href="ReactPortfolio.html" target="__blank"> React</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
       <div class="row" style=" background-color: #121214; padding: 10px;margin-bottom: 4%;">
         <div class="col"></div><div class="my-auto col-lg-1 col-3 col-sm-2 col-md-1"><img style="width: 100%;" src="../assets/React-Icon.png"></div><div class="col-sm-8 col-6 col-lg-5 col-md-7 my-auto mx-auto"><h2 style="color: #ffc107">React Design + Development Projects</h2><p style="color:white">Click project titles to view source code or previews</p></div><div class="col"></div>
     </div>
