--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="Emilia Hernandez - Resume 2024.pdf" target="__blank"> Resume</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ReactPortfolio.html" target="__blank"> React</a>
+                  </li>
               </ul>
             </div>
           </nav>
