--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <a class="nav-link" href="Emilia Hernandez - Resume 2024.pdf" target="__blank"> Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ReactPortfolio.html" target="__blank"> React</a>
+                    <a class="nav-link" href="pages/ReactPortfolio.html" target="__blank"> React</a>
                   </li>
               </ul>
             </div>
