--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HPQFMFSJ4C"></script>
   </script>
-    <title>Emilia's 23rd</title>
+    <title>Grad Party 🎓</title>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -25,8 +25,8 @@
   <body>
     <div class="row web-view">
       <div class="col">
-        <h1 class="text-center intro">?!
-        <h4 class="text-wrap text-center" id="blurb">Some text here</h4>
+        <h1 class="text-center intro">Thank You!
+        <h4 class="text-wrap text-center" id="blurb">I've compiled photos of some of our shared experiences while I was a student at UCF. Thanks for being my friend :) </h4>
       </div>
     </div>
 
