--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
       <div class="col">
         <h1 class="text-center intro">Thank You!
         <h4 class="text-wrap text-center" id="blurb">I've compiled photos of some of our shared experiences while I was a student at UCF. Thanks for being my friend :) </h4>
+        <button><a hrf="https://www.emiliahernandez.com/src/index.html">View photos of evvverrryyyone</a></button>
       </div>
     </div>
 
