--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,17 @@
     <link rel="stylesheet" type="text/css" href="./styles.css">
   </head>
   <body>
-    <div class="row web-view">
+    <div class="row">
       <div class="col">
         <h1 class="text-center intro">Thank You!
         <h4 class="text-wrap text-center" id="blurb">I've compiled photos of some of our shared experiences while I was a student at UCF. Thanks for being my friend :) </h4>
-        <button><a href="https://www.emiliahernandez.com/src/index.html?utm_term=all">View photos of evvverrryyyone</a></button>
+        <p>*Photo order is randomly generated*</p>
+        <button type="button" class="btn btn-light text-center" style="display:block"><a style="color:black;text-decoration: none;font-weight: bold;" href="https://www.emiliahernandez.com/src/index.html?utm_term=all">View photos of evvverrryyyone</a></button>
       </div>
     </div>
 
     <main id="contentCards">
-    <div class="all-elephant-cards" ></div>
+    <div class="all-friend-cards" ></div>
     
         <script type="module" src="./app.js"></script>  </main>
   </body>
