--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <h1 class="text-center intro">Thank You!
         <h4 class="text-wrap text-center" id="blurb">I've compiled photos of some of our shared experiences while I was a student at UCF. Thanks for being my friend :) </h4>
         <p>*Photo order is randomly generated*</p>
-        <button type="button" class="btn btn-light text-center" style="display:block"><a style="color:black;text-decoration: none;font-weight: bold;" href="https://www.emiliahernandez.com/src/index.html?utm_term=all">View photos of evvverrryyyone</a></button>
+        <button type="button" class="btn btn-light text-center mx-auto" style="display:block"><a style="color:black;text-decoration: none;font-weight: bold;" href="https://www.emiliahernandez.com/src/index.html?utm_term=all">View photos of evvverrryyyone</a></button>
       </div>
     </div>
 
