--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="./styles.css">
   </head>
   <body>
-    <div class="row">
+    <div class="row" style="margin-bottom:20px">
       <div class="col">
         <h1 class="text-center intro">Thank You!
         <h4 class="text-wrap text-center" id="blurb">I've compiled photos of some of our shared experiences while I was a student at UCF. Thanks for being my friend :) </h4>
