--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-1 d-lg-none"></div>
             <div class="col-lg-7 col-10 dark" style="margin:auto">
                 <h2 class="introductionHead dark text-wrap starter-small text-uppercase">I'm <span style="color: #e53886;">Emilia</span>: Your digital media friend and fiend</h2>
-                <h2 class="text-wrap introductionText starter-small" style="padding-bottom: 10%">I am an undergraduate <span style="color: #ffc904;">Digital Media: Web and Social Platforms</span> student at the <span style="color: #ffc904;">University of Central Florida.</span> I love to get my hands on new software and create projects that are evocative and memorable.</h2>
+                <h2 class="text-wrap introductionText starter-small" style="padding-bottom: 10%">I have earned a <span style="color: #ffc904;">Digital Media: Web and Social Platforms B.A.</span> and my specialties are <span style="color: #ffc904;">Web Design + Development!</span> I love to get my hands on new software and create projects that are evocative and memorable.</h2>
             </div>
             <div class="col-1 dark"></div>
         </div>
