--- a/pages/LiveMasShowcase.html
+++ b/pages/LiveMasShowcase.html
@@ -96,6 +96,9 @@
                    <p style="color:white">A poster joining the Lucky Little Darlings and sketchy icons representing their personalities and interests</p>
                 </div>
                 </div> 
+
+
+
                 <div class="row starter">
     <!--Display on medium and above-->
                     <div class="col-1">
@@ -139,6 +142,39 @@
                                      <p style="color:white">Individual portraits of the Lucky Little Darlings</p>
                                   </div>
                                   </div> 
+                                  
+                <div class="row starter">
+                  <div class="col" style="display: flex; justify-content: center;">
+                    <img src="../LLD/Head in the clouds.png" style="width:70%; border: 10px solid #ffffff" alt="Illustration of crying snake holding a heart, tattooed, and rugged appearance">
+                </div>
+                </div>
+                <div class="row starter">
+                  <div class="col" style="display: flex; justify-content: center;">
+                   <p style="color:white">A poster combining photography of crochet plushies of the darlings and a digital background. Starring: Juniper the Panda, Dandy the Bunny, and Rata the Rat</p>
+                </div>
+                </div> 
+
+                <div class="row starter">
+                  <div class="col" style="display: flex; justify-content: center;">
+                    <img src="../LLD/make your own magic.png" style="width:70%; border: 10px solid #ffffff" alt="Illustration of crying snake holding a heart, tattooed, and rugged appearance">
+                </div>
+                </div>
+                <div class="row starter">
+                  <div class="col" style="display: flex; justify-content: center;">
+                   <p style="color:white">A poster combining photography of clay figurines and a digital background. The darlings are painted and dressed in their classic ponchos. Starring: Celestine the Raccoon, Amora the Dog, and Leonessa the Lion</p>
+                </div>
+                </div> 
+
+                <div class="row starter">
+                  <div class="col" style="display: flex; justify-content: center;">
+                    <img src="../LLD/Better Together.png" style="width:70%; border: 10px solid #ffffff" alt="Illustration of crying snake holding a heart, tattooed, and rugged appearance">
+                </div>
+                </div>
+                <div class="row starter">
+                  <div class="col" style="display: flex; justify-content: center;">
+                   <p style="color:white">A poster combining photography of punch-needle accessories and a digital background. The pieces were made with embroidery flossed and created with rug-making techniques</p>
+                </div>
+                </div> 
             </div>
 
     </body>
